--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ PyMySQL==0.10.0
 psycopg2==2.8.6
 redis==3.5.2
 requests==2.24.0
+flask==1.1.2
+flask_restful==0.3.8
 ptvsd==4.3.2
 coverage==5.2.1
 pylint==2.5.3
